feat: add BLOCKED_BLOOM address lookup backend + shared build progress logging
Adds a blocked Bloom filter backend that closes a concrete gap: at the
1.377 B-entry Full DB tier the Binary Fuse peeling construction needs
~29 B/entry (~42 GB peak heap) and does not complete on a 64 GB machine,
even though the finished filter would be only ~1.5 GB. BLOCKED_BLOOM
builds in a single streaming pass with peak memory equal to the filter
itself, so it builds where the fuse filters cannot.

Measured (FilterMeasurementMain, new harness, real databases):

  Full DB, 1,377,478,516 entries, 6 GB heap:
    2051.8 MiB retained (1.562 B/entry), FPR 0.485 %, 9.53 M lookups/s,
    0 false negatives. Size matched the analytic 2^25 x 512-bit prediction.

  Light DB, 132,288,304 entries:
    BLOCKED_BLOOM     34.8 s build, 259.5 MiB, 11.54 M/s, FPR 0.258 %
    BINARY_FUSE_8     68.8 s build, 143.4 MiB, 12.93 M/s, FPR 0.390 %
    BINARY_FUSE_16    70.6 s build, 287.4 MiB, 12.30 M/s, FPR 0.002 %
    TRUNCATED_LONG_64 41.9 s build, 1082.2 MiB, 1.52 M/s, FPR 0.000 %

Additive, not a replacement: at matched footprint (1.045 vs 1.137 B/entry)
Fuse-8's 0.390 % beats blocked Bloom's 2.937 %, so per byte the fuse
construction remains the better filter and keeps the GPU pre-filter path.
The two have disjoint optimal domains, so nothing was removed.

k = 8 is now measured rather than inherited: sweeping k at fixed 256 MiB
gives FPR 5.964 / 1.378 / 0.307 / 0.193 / 0.184 / 0.219 / 0.361 % for
k = 1 / 2 / 4 / 6 / 8 / 11 / 16. FPR is not monotone in k -- it bottoms at
8 and rises as the shared block saturates, and the blocked optimum sits
below the unblocked textbook value (m/n)*ln2 ~ 11 because per-block load
variance penalises large k.

Fixes a real defect found while choosing k: the probe walk
bit_i = (x + i*y) mod 512 has period 512/gcd(y,512), so an unconstrained
stride made 1 key in 512 place every probe on a single bit. Forcing the
stride odd guarantees distinct probes and measured 0.258 % -> 0.